# py-xiaozhi

./: authorize_python_access.sh  build.json  format_code.sh  main.py  pyproject.toml  requirements_mac.txt  secret_message.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  code_improvement.md  documentation_improvement.md  feature_request.md
.github/workflows/: build-window.yml  vitepress.yml
documents/: README.md
documents/docs/guide/: Shortcut Description.md  Voice Interaction Mode Description.md
hooks/: hook-vosk.py
scripts/: calendar_query.py  camera_scanner.py  dir_tree.py  music_cache_scanner.py  py_audio_scanner.py  webrtc_aec_demo.py
src/: application.py
src/audio_codecs/: audio_codec.py
src/audio_processing/: vad_detector.py  wake_word_detect.py  webrtc_processing.py
src/constants/: constants.py  system.py
src/core/: ota.py  system_initializer.py
src/display/: base_display.py  cli_display.py  gui_display.py  gui_display.ui
src/iot/: thing.py  thing_manager.py
src/iot/things/: countdown_timer.py  lamp.py  music_player.py  speaker.py
src/mcp/: mcp_server.py
src/mcp/tools/: tool_base.py  tool_manager.py
src/network/: mqtt_client.py
src/protocols/: mqtt_protocol.py  protocol.py  websocket_protocol.py
src/utils/: common_utils.py  config_manager.py  conversation_history.py  device_activator.py  device_fingerprint.py  logging_config.py  message_board.py  opus_loader.py  presence_manager.py  resource_finder.py  volume_controller.py
src/views/: __init__.py
tests/: speech_brain.py
(+104 files in other folders)
